# django-structlog

./: .buildinfo  .coveragerc  .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .readthedocs.yaml  .toml  .travis.yml  CONTRIBUTORS.txt  LICENSE.rst  MANIFEST.in  README.md  README.rst  acknowledgements.html  api_documentation.html  authors.html  celery.html  changelog.html  commands.html  configuration.html  demo.html  development.html  docker-compose-celery-3.yml  docker-compose-production.yml  docker-compose.amqp.yml  docker-compose.docs.yml  docker-compose.yml  events.html  example_outputs.html  genindex.html  getting_started.html  how_tos.html  index.html  licence.html  manage.py  objects.inv  py-modindex.html  (+12 more)
.envs/.local/: .amqp  .django  .postgres  .redis
.github/: dependabot.yml
.github/workflows/: deployment.yml  gh.yml  main.yml  pre-commit.yml  tests.yml  workflow.yml
_sources/: api_documentation.rst.txt  authors.rst.txt  celery.rst.txt  changelog.rst.txt  commands.rst.txt  configuration.rst.txt  development.rst.txt  events.rst.txt  example_outputs.rst.txt  how_tos.rst.txt  index.rst.txt  licence.rst.txt  running_tests.rst.txt  upgrade_guide.rst.txt
_static/: documentation_options.js
compose/local/django/: Dockerfile  entrypoint  start_asgi  start_wsgi
compose/local/django/celery/beat/: start
compose/local/django/celery/flower/: start
compose/local/django/celery/worker/: start
compose/local/doc/: Dockerfile
compose/local/docs/: Dockerfile  start
compose/local/postgres/: Dockerfile
compose/production/django/: Dockerfile  entrypoint
compose/production/django/celery/beat/: start
compose/production/django/celery/worker/: start
compose/production/postgres/: Dockerfile
compose/production/traefik/: traefik.toml
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py  test_demo_app.py
django_structlog/: __init__.py  app_settings.py  apps.py  commands.py  middlewares.py  processors.py  signals.py
django_structlog/celery/: __init__.py  middlewares.py  receivers.py  signals.py  steps.py
django_structlog/huey/: __init__.py  receivers.py
django_structlog/middlewares/: __init__.py  celery.py  request.py
django_structlog/tasks/: receivers.py
django_structlog_demo_project/: conftest.py  tasks.py
django_structlog_demo_project/command_examples/: apps.py
django_structlog_demo_project/command_examples/management/commands/: example_command.py  example_nested_command.py
django_structlog_demo_project/command_examples/tests/: test_commands.py
django_structlog_demo_project/contrib/sites/migrations/: 0003_set_site_domain_and_name.py  0004_alter_site_options.py
django_structlog_demo_project/home/: api_views.py  apps.py  ninja_views.py  views.py
django_structlog_demo_project/home/static/js/: home.js
django_structlog_demo_project/home/tests/: test_api_views.py  test_ninja_views.py  test_views.py
django_structlog_demo_project/static/css/: project.css
django_structlog_demo_project/taskapp/: celery.py  huey.py
django_structlog_demo_project/taskapp/tests/: test_celery.py
django_structlog_demo_project/templates/: 404.html  base.html
django_structlog_demo_project/templates/account/: login.html
django_structlog_demo_project/templates/pages/: home.html
django_structlog_demo_project/test_app/: __init__.py  apps.py
django_structlog_demo_project/test_app/tests/: test_middlewares.py
django_structlog_demo_project/test_app/tests/celery/: test_receivers.py  test_steps.py
django_structlog_demo_project/test_app/tests/middlewares/: test_celery.py  test_request.py
django_structlog_demo_project/tests/: test_tasks.py
django_structlog_demo_project/users/: adapters.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
django_structlog_demo_project/users/migrations/: 0001_initial.py  0002_alter_user_first_name.py
django_structlog_demo_project/users/tests/: factories.py  test_adapters.py  test_forms.py  test_models.py  test_urls.py  test_views.py
docs/: acknowledgements.rst  api_documentation.rst  celery.rst  changelog.rst  commands.rst  conf.py  configuration.rst  demo.rst  development.rst  events.rst  getting_started.rst  how_tos.rst  index.rst  licence.rst  requirements.txt  roadmap.rst  versions.rst
docs/source/: conf.py  index.rst
requirements/: base.txt  black.txt  ci.txt  coverage.txt  deployment.txt  doc.txt  flake8.txt  local-base.txt  local-celery-3.txt  local.txt  mypy.txt  production.txt  ruff.txt
test_app/: __init__.py
test_app/tests/: test_app_settings.py  test_apps.py  test_commands.py  test_middlewares.py  test_processors.py
test_app/tests/celery/: test_receivers.py  test_steps.py
test_app/tests/middlewares/: test_celery.py  test_request.py
test_app/tests/tasks/: test_receivers.py
test_project/: settings.py  urls.py
